--- a/languages/voice-search.pot
+++ b/languages/voice-search.pot
@@ -1,34 +1,34 @@
-# Copyright (C) 2014 Pascal Birchler
-# This file is distributed under the GPL-2.0+.
+# Copyright (C) 2015 Pascal Birchler
+# This file is distributed under the GPLv2+.
 msgid ""
 msgstr ""
-"Project-Id-Version: Voice Search 1.0.0\n"
+"Project-Id-Version: Voice Search 1.1.0\n"
 "Report-Msgid-Bugs-To: https://pascalbirchler.com\n"
 "POT-Creation-Date: 2014-12-28 12:54:34+00:00\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"PO-Revision-Date: 2014-MO-DA HO:MI+ZONE\n"
+"PO-Revision-Date: 2015-MO-DA HO:MI+ZONE\n"
 "Last-Translator: Pascal Birchler\n"
-"Language-Team: SpinPress\n"
-"X-Generator: grunt-wp-i18n 0.4.9\n"
+"Language-Team: Pascal Birchler <support@spinpress.com>\n"
+"X-Generator: grunt-wp-i18n 0.5.2\n"
 "X-Poedit-KeywordsList: "
 "__;_e;_x:1,2c;_ex:1,2c;_n:1,2;_nx:1,2,4c;_n_noop:1,2;_nx_noop:1,2,3c;esc_"
 "attr__;esc_html__;esc_attr_e;esc_html_e;esc_attr_x:1,2c;esc_html_x:1,2c;\n"
 "Language: en\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Poedit-Country: United States\n"
+"X-Poedit-Country: Switzerland\n"
 "X-Poedit-SourceCharset: UTF-8\n"
 "X-Poedit-Basepath: ../\n"
 "X-Poedit-SearchPath-0: .\n"
 "X-Poedit-Bookmarks: \n"
 "X-Textdomain-Support: yes\n"
 
-#: voice-search.php:47
+#: classes/plugin.php:52
 msgid "Speech Input"
 msgstr ""
 
-#: voice-search.php:48
+#: classes/plugin.php:53
 msgid "Start Talking…"
 msgstr ""
 
@@ -41,9 +41,7 @@ msgid "https://spinpress.com/wordpress-web-speech-api/"
 msgstr ""
 
 #. Description of the plugin/theme
-msgid ""
-"Allows visitors to search the site using their voice. Currently supported "
-"by Safari and Chrome on both desktop and mobile."
+msgid "Allows visitors to search the site using their voice."
 msgstr ""
 
 #. Author of the plugin/theme
